fixing main__wrap width

--- a/static/css/style.scss
+++ b/static/css/style.scss
@@ -68,6 +68,8 @@ header{
   position:relative;
   background:white;
   z-index:1;
+  margin-left:auto;
+  margin-right:auto;
 }
 
 i.fas.fa-pencil-alt{
